--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.25.0",
     "core-js": "^3.6.5",
     "element-ui": "^2.15.6",
+    "mockjs": "^1.1.0",
+    "qs": "^6.10.3",
     "vue": "^2.6.11",
     "vue-router": "^3.5.3"
   },
